Fix SA modifying OLF parameters
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>