@@ -16,7 +16,6 @@ import com.powsybl.openloadflow.network.util.VoltageInitializer;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -37,9 +36,12 @@ public class AcLoadFlowParameters extends AbstractLoadFlowParameters {
 
     private final boolean asymmetrical;
 
+    private boolean throwsExceptionInCaseOfSlackDistributionFailure;
+
     public AcLoadFlowParameters(LfNetworkParameters networkParameters, AcEquationSystemCreationParameters equationSystemCreationParameters,
                                 NewtonRaphsonParameters newtonRaphsonParameters, List<AcOuterLoop> outerLoops, int maxOuterLoopIterations,
-                                MatrixFactory matrixFactory, VoltageInitializer voltageInitializer, boolean asymmetrical) {
+                                MatrixFactory matrixFactory, VoltageInitializer voltageInitializer, boolean asymmetrical,
+                                boolean throwsExceptionInCaseOfSlackDistributionFailure) {
         super(networkParameters, matrixFactory);
         this.equationSystemCreationParameters = Objects.requireNonNull(equationSystemCreationParameters);
         this.newtonRaphsonParameters = Objects.requireNonNull(newtonRaphsonParameters);
@@ -47,6 +49,7 @@ public class AcLoadFlowParameters extends AbstractLoadFlowParameters {
         this.maxOuterLoopIterations = maxOuterLoopIterations;
         this.voltageInitializer = Objects.requireNonNull(voltageInitializer);
         this.asymmetrical = asymmetrical;
+        this.throwsExceptionInCaseOfSlackDistributionFailure = throwsExceptionInCaseOfSlackDistributionFailure;
     }
 
     public AcEquationSystemCreationParameters getEquationSystemCreationParameters() {
@@ -77,13 +80,21 @@ public class AcLoadFlowParameters extends AbstractLoadFlowParameters {
         return asymmetrical;
     }
 
+    public boolean isThrowsExceptionInCaseOfSlackDistributionFailure() {
+        return throwsExceptionInCaseOfSlackDistributionFailure;
+    }
+
+    public void setThrowsExceptionInCaseOfSlackDistributionFailure(boolean throwsExceptionInCaseOfSlackDistributionFailure) {
+        this.throwsExceptionInCaseOfSlackDistributionFailure = throwsExceptionInCaseOfSlackDistributionFailure;
+    }
+
     @Override
     public String toString() {
         return "AcLoadFlowParameters(" +
                 "networkParameters=" + networkParameters +
                 ", equationSystemCreationParameters=" + equationSystemCreationParameters +
                 ", newtonRaphsonParameters=" + newtonRaphsonParameters +
-                ", outerLoops=" + outerLoops.stream().map(outerLoop -> outerLoop.getClass().getSimpleName()).collect(Collectors.toList()) +
+                ", outerLoops=" + outerLoops.stream().map(outerLoop -> outerLoop.getClass().getSimpleName()).toList() +
                 ", maxOuterLoopIterations=" + maxOuterLoopIterations +
                 ", matrixFactory=" + matrixFactory.getClass().getSimpleName() +
                 ", voltageInitializer=" + voltageInitializer.getClass().getSimpleName() +
